--- a/.pylintrc
+++ b/.pylintrc
@@ -63,7 +63,7 @@ ignored-modules=
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-init-hook='import sys; sys.path.append("C:\\Users\\savio\\Repositories\\python_sandbox\\funcLog")'
+init-hook='import sys; sys.path.append("C:\\Users\\savio\\repositories\\python_100_days_of_coding\\src")
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use, and will cap the count on Windows to
@@ -84,7 +84,7 @@ persistent=yes
 
 # Minimum Python version to use for version dependent checks. Will default to
 # the version used to run pylint.
-py-version=3.11
+py-version=3.9
 
 # Discover python modules and packages in the file system subtree.
 recursive=no
