--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,45 @@
 astroid==2.12.13
-attrs==22.1.0
-autopep8==2.0.1
 black==22.12.0
+brotlipy==0.7.0
+certifi==2021.10.8
+cffi @ file:///C:/ci_310/cffi_1642682485096/work
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
 click==8.1.3
 colorama==0.4.6
+conda==4.12.0
+conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_1617045594566/work
+conda-package-handling @ file:///C:/ci/conda-package-handling_1649106011304/work
+coverage==7.5.4
+cryptography @ file:///C:/ci/cryptography_1639414720302/work
 dill==0.3.6
-iniconfig==1.1.1
-isort==5.11.3
+exceptiongroup==1.2.1
+idna @ file:///tmp/build/80754af9/idna_1637925883363/work
+iniconfig==2.0.0
+isort==5.10.1
 lazy-object-proxy==1.8.0
 mccabe==0.7.0
-mypy==0.991
+menuinst @ file:///C:/ci/menuinst_1631733438520/work
 mypy-extensions==0.4.3
-packaging==22.0
+packaging==24.1
 pathspec==0.10.3
-platformdirs==2.6.0
-pluggy==1.0.0
+platformdirs==2.5.4
+pluggy==1.5.0
 pycodestyle==2.10.0
-pylint==2.15.9
-pytest==7.2.0
-pytest-cov==4.0.0
-coverage==7.0.2
+pycosat==0.6.3
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
+PySocks @ file:///C:/ci/pysocks_1605307512533/work
+pytest==8.2.2
+pytest-cov==5.0.0
+pywin32==302
+requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
+ruamel-yaml-conda @ file:///C:/ci/ruamel_yaml_1616016898638/work
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+tomli==2.0.1
 tomlkit==0.11.6
+tqdm @ file:///opt/conda/conda-bld/tqdm_1647339053476/work
 typing_extensions==4.4.0
+urllib3 @ file:///opt/conda/conda-bld/urllib3_1643638302206/work
+win-inet-pton @ file:///C:/ci/win_inet_pton_1605306162074/work
+wincertstore==0.2
 wrapt==1.14.1
-fire==0.5.0
-#web
-fastapi==0.96.1
-uvicorn==0.22.0
-#text tools
-yake==0.4.8
-wikipedia==1.4.0
