--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,58 @@
+anyio==4.4.0
 astroid==2.12.13
+attrs==22.1.0
+autopep8==2.0.1
+beautifulsoup4==4.12.3
 black==22.12.0
 brotlipy==0.7.0
 certifi==2021.10.8
-cffi @ file:///C:/ci_310/cffi_1642682485096/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+cffi==1.17.0
+charset-normalizer==3.3.2
 click==8.1.3
 colorama==0.4.6
-conda==4.12.0
-conda-content-trust @ file:///tmp/build/80754af9/conda-content-trust_1617045594566/work
-conda-package-handling @ file:///C:/ci/conda-package-handling_1649106011304/work
 coverage==7.5.4
-cryptography @ file:///C:/ci/cryptography_1639414720302/work
 dill==0.3.6
 exceptiongroup==1.2.1
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
+fastapi==0.96.1
+fire==0.5.0
+h11==0.14.0
+idna==3.7
 iniconfig==2.0.0
 isort==5.10.1
+jellyfish==1.0.4
 lazy-object-proxy==1.8.0
 mccabe==0.7.0
-menuinst @ file:///C:/ci/menuinst_1631733438520/work
+mypy==0.991
 mypy-extensions==0.4.3
+networkx==3.2.1
+numpy==2.0.0
 packaging==24.1
 pathspec==0.10.3
 platformdirs==2.5.4
 pluggy==1.5.0
 pycodestyle==2.10.0
 pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
-PySocks @ file:///C:/ci/pysocks_1605307512533/work
+pycparser==2.22
+pydantic==1.10.17
+pylint==2.15.9
 pytest==8.2.2
 pytest-cov==5.0.0
 pywin32==302
-requests @ file:///opt/conda/conda-bld/requests_1641824580448/work
-ruamel-yaml-conda @ file:///C:/ci/ruamel_yaml_1616016898638/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+regex==2024.5.15
+requests==2.32.3
+segtok==1.5.11
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+starlette==0.27.0
+tabulate==0.9.0
+termcolor==2.4.0
 tomli==2.0.1
 tomlkit==0.11.6
-tqdm @ file:///opt/conda/conda-bld/tqdm_1647339053476/work
 typing_extensions==4.4.0
-urllib3 @ file:///opt/conda/conda-bld/urllib3_1643638302206/work
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306162074/work
+urllib3==2.2.2
+uvicorn==0.22.0
+wikipedia==1.4.0
 wincertstore==0.2
 wrapt==1.14.1
+yake==0.4.8
