--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "request": "launch",
             "console": "integratedTerminal",
             // You can pass in the test filter in the command pallete, for example: -k "treasure"
-            "args": ["-s", "-k", "test_password_generator", "${command:pickArgs}"]
+            "args": ["-s", "-k", "test_hangman", "${command:pickArgs}"]
         },
         {
             "name": "Python: Current File",
